--- a/src/app/pages/customer-information-screen/customer-information/customer-information.html
+++ b/src/app/pages/customer-information-screen/customer-information/customer-information.html
@@ -224,6 +224,7 @@
           <option value="">Select Gender</option>
           <option value="FEMALE">Female</option>
           <option value="MALE">Male</option>
+          <option value="PREFER_NOT_TO_SAY">Prefer not to say</option>
         </select>
       </div>
       <!-- Father Name -->
