--- a/src/app/pages/customer-create/contact-medium-info/contact-medium-info/contact-medium-info.html
+++ b/src/app/pages/customer-create/contact-medium-info/contact-medium-info/contact-medium-info.html
@@ -291,7 +291,7 @@
                 (click)="back()"
                 class="px-6 py-2 border border-gray-300 text-gray-700 rounded-md shadow-md bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500 text-base font-medium"
               >
-                Back
+                Previous
               </button>
               <button
                 type="button"
