--- a/src/app/pages/customer-information-screen/customer-information/customer-information.html
+++ b/src/app/pages/customer-information-screen/customer-information/customer-information.html
@@ -1,4 +1,61 @@
+
 <div class="p-6 md:p-8">
+
+  <!--<div *ngIf="showToast" 
+     class="fixed top-5 right-5 z-[9999] animate-slide-in-left transition-all">
+  <div class="flex items-center gap-3 bg-white px-6 py-4 rounded-lg border-2 border-green-500 shadow-xl">
+    <svg class="w-6 h-6 text-green-500 flex-shrink-0" 
+         xmlns="http://www.w3.org/2000/svg" 
+         viewBox="0 0 24 24" 
+         fill="none" 
+         stroke="currentColor" 
+         stroke-width="2">
+      <polyline points="20 6 9 17 4 12"></polyline>
+    </svg>
+    <span class="font-medium text-green-800">
+      Customer has been successfully created
+    </span>
+  </div>
+</div>-->
+
+<div class="relative"> <!-- container -->
+<div
+    *ngIf="showToast"
+    class="absolute top-5 left-5 z-[9999] animate-fade-in-out transition-all"
+>
+<div
+      class="flex items-center gap-3 bg-white px-6 py-4 rounded-lg border-2 border-green-500 shadow-xl"
+>
+<!-- Check Icon -->
+<svg
+        class="w-6 h-6 text-green-500 flex-shrink-0"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+>
+<polyline points="20 6 9 17 4 12"></polyline>
+</svg>
+ 
+      <!-- Text -->
+<span class="font-medium text-green-800">
+        Customer has been successfully created
+</span>
+</div>
+</div>
+</div>
+ 
+
+
+           <!-- <div
+  *ngIf="showToast"
+  class="fixed top-5 right-5 bg-green-500 text-white px-6 py-3 rounded-lg shadow-lg text-sm font-medium 
+         animate-fade-in-out z-50"
+>
+  Customer has been successfully created
+</div>-->
+
   <div class="bg-white p-6 md:p-8 rounded-xl shadow-lg border border-gray-200">
     <div class="flex justify-end items-center mb-6">
       <button
