--- a/src/app/pages/customer-create/contact-medium-info/contact-medium-info/contact-medium-info.html
+++ b/src/app/pages/customer-create/contact-medium-info/contact-medium-info/contact-medium-info.html
@@ -51,7 +51,7 @@
           </div>
         </div>
 
-        <div 
+        <!--<div 
   *ngIf="isSuccessModalOpen"
   class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-gray-900/50 backdrop-blur-sm"
 >
@@ -79,7 +79,7 @@
       OK
     </button>
   </div>
-</div>
+</div>-->
 
 <div 
   *ngIf="isFailedModalOpen"
