product list page fixed

--- a/src/app/pages/customer-information-screen/customer-information-screen.html
+++ b/src/app/pages/customer-information-screen/customer-information-screen.html
@@ -1,6 +1,7 @@
-<div class="flex flex-col h-screen bg-gray-100">
+<div class="flex flex-col h-screen">
 
     <app-navbar></app-navbar>
+    <app-background-item></app-background-item>
 
     <div class="flex flex-1 overflow-hidden">
 
