--- a/src/app/pages/offer-selection/offer-selection.html
+++ b/src/app/pages/offer-selection/offer-selection.html
@@ -1,16 +1,10 @@
 <app-navbar></app-navbar>
+<app-background-item></app-background-item>
 
-<div class="flex h-[calc(100vh-4rem)] bg-gray-100 p-4 font-inter">
+<div class="flex h-[calc(100vh-4rem)] p-4 font-inter">
   <app-sidebar></app-sidebar>
 
   <div class="flex-grow bg-white rounded-r-xl shadow-2xl flex relative overflow-hidden">
-    <!-- Arka plan -->
-    <div
-      class="absolute inset-0 z-0 opacity-5 bg-no-repeat bg-cover bg-center"
-      style="
-        background-image: url('https://placehold.co/1200x800/262626/808080?text=Offer+Selection+Background');
-      "
-    ></div>
 
     <!-- Sol taraf: Catalog / Campaign -->
     <div class="flex-1 p-6 md:p-8 z-10 flex flex-col">
