--- a/src/app/pages/offer-selection/offer-selection.html
+++ b/src/app/pages/offer-selection/offer-selection.html
@@ -237,7 +237,7 @@
                 <p class="text-sm text-gray-600">
                   Discount Rate:
                   <span class="font-semibold text-green-600">
-                    {{ campaignGroup.discountRate }}%
+                    {{ campaignGroup.discountRate*100 }}%
                   </span>
                 </p>
               </div>
@@ -329,7 +329,7 @@
                     Campaign
                   </span>
                   <span class="px-2 py-1 rounded-full bg-green-100 text-green-700 text-xs">
-                    {{ group.discountRate }}% OFF
+                    {{ group.discountRate*100 }}% OFF
                   </span>
                 </div>
               </div>
